<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.ZGAudioPlayerPublishUI">

        <com.zego.common.widgets.TitleLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:name="@string/tx_audio_player_publish">

            <ImageView
                android:id="@+id/go_back"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_arrow_right"
                android:padding="10dp" />

        </com.zego.common.widgets.TitleLayout>

        <TextView
            android:id="@+id/roomIDTx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_show_roomID"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/streamIDTx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_show_streamID"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/effect_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:layout_marginTop="20dp"
            android:background="@color/gray" />

        <!--    暂停、恢复-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/resumeAllEffect"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_resume" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/tx_resume_all" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pauseAllEffect"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_pause" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/tx_pause_all" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/stopAllEffect"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_stop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/tx_stop_all" />
            </LinearLayout>

        </LinearLayout>

        <!--    音量-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tx_soundlevel"
                android:textSize="16sp" />

            <com.zego.common.widgets.CustomSeekBar
                android:id="@+id/soundlevel_step"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                style="@style/CustomSeekbarStyle"
                android:progress="100" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:layout_marginTop="20dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_mixing"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/auxSw"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_sw_open"/>
        </LinearLayout>

    </LinearLayout>
</layout>